<resources>
    <string name="app_name">My Browser</string>
    <string name="chrome">chrome</string>
    <string name="brave">brave</string>
    <string name="bing">bing</string>
    <string name="wiki">wiki</string>
    <string name="duckduckgo">duckduckgo</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>

    <string name="satyam">By SATYAM SRIVASTAVA</string>
    <string name="my_browser">My Browser</string>
</resources>